--- a/app/src/main/res/layout/date_time_slot.xml
+++ b/app/src/main/res/layout/date_time_slot.xml
@@ -8,6 +8,6 @@
     android:gravity="center_vertical"
     android:drawableTint="@android:color/white"
     android:drawableRight="@drawable/forward"
-    android:textSize="14sp">
+    android:textSize="@dimen/upcoming">
 
 </TextView>
