--- a/app/src/main/res/layout/registerationpage.xml
+++ b/app/src/main/res/layout/registerationpage.xml
@@ -5,14 +5,30 @@
     android:orientation="vertical"
     android:padding="5dp">
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:text="@string/login_information"
+            android:textSize="@dimen/font_size"
+            android:paddingLeft="5dp"
+            android:textStyle="bold"
+            android:id="@+id/text"
+            android:gravity="left|center"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below="@+id/text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
             <EditText
                 android:id="@+id/et_email"
@@ -51,32 +67,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:hint="@string/address" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:weightSum="1">
 
-               <EditText
-                   android:layout_width="0dp"
-                   android:layout_height="wrap_content"
-                   android:id="@+id/et_state"
-                   android:layout_weight="0.2"
-                   android:hint="@string/CA"/>
-
                 <EditText
+                    android:id="@+id/et_state"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="0.2"
+                    android:hint="@string/CA" />
+
+                <EditText
                     android:id="@+id/et_city"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="0.4"
-                    android:hint="@string/city"/>
+                    android:hint="@string/city" />
+
                 <EditText
                     android:id="@+id/et_zip"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".4"
-                    android:hint="@string/zip"/>
+                    android:hint="@string/zip" />
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </RelativeLayout>
 </LinearLayout>
