--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,13 @@
     <color name="logo_bg">#04c7ff</color>
     <color name="black">#000</color>
 
-    <color name="list_back">#5d6d7e</color>
+    <color name="home_back">#FEFEFE</color>
+    <color name="list_back">#f2f2f2</color>
     <color name="background_home">#eeeeee</color>
+    <color name="upcoming_appointment_count">#F69B17</color>
+
+
+    <color name="hostisMe">#9F9F9F</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#f2f2f2</color>
 </resources>
